# TheOriginalsTestTask

./: .env  .gitignore  Dockerfile  README.MD  alembic.ini  docker-compose.yml  entrypoint.sh  init.sql  main.py  middleware.py  pyproject.toml  tools.py
api/: __init__.py  urls.py
api/tasks/: __init__.py  router.py  schemas.py  services.py
api/users/: router.py  schemas.py
auth/: router.py  schemas.py
celery_app/: __init__.py  worker.py
database/: config.py  env.py
database/models/: Task.py  User.py  __init__.py
database/versions/: 2024_09_12_1739-8be8866bd74e_.py  2024_09_14_1549-190abd781196_.py
